# wsjcpp-safe-scripting

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  wsjcpp.yml
src/: main.cpp  safe_scripting_proc_test_proc.cpp  safe_scripting_proc_test_proc.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/data/: some.template
unit-tests.wsjcpp/data/test_int/: script2
unit-tests.wsjcpp/data/test_read_file/: script1
unit-tests.wsjcpp/src/: unit_test_procedure_concat.cpp  unit_test_procedure_concat.h  unit_test_procedure_set_value.cpp  unit_test_procedure_set_value.h  unit_test_variable.cpp  unit_test_variable.h
